--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from live.themewild.com/eduka/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 26 Feb 2025 14:07:09 GMT -->
+<!-- Mirrored from live.themewild.com/UBC/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 26 Feb 2025 14:07:09 GMT -->
 
 <head>
     <!-- meta tags -->
@@ -227,7 +227,7 @@
                             <div class="col-md-12 col-lg-7">
                                 <div class="hero-content">
                                     <h6 class="hero-sub-title" data-animation="fadeInDown" data-delay=".25s">
-                                        <i class="far fa-book-open-reader"></i>Welcome To Eduka!
+                                        <i class="far fa-book-open-reader"></i>Welcome To UBC!
                                     </h6>
                                     <h1 class="hero-title" data-animation="fadeInRight" data-delay=".50s">
                                         Start Your Beautiful And <span>Bright</span> Future
@@ -254,7 +254,7 @@
                             <div class="col-md-12 col-lg-7">
                                 <div class="hero-content">
                                     <h6 class="hero-sub-title" data-animation="fadeInDown" data-delay=".25s">
-                                        <i class="far fa-book-open-reader"></i>Welcome To Eduka!
+                                        <i class="far fa-book-open-reader"></i>Welcome To UBC!
                                     </h6>
                                     <h1 class="hero-title" data-animation="fadeInRight" data-delay=".50s">
                                         Start Your Beautiful And <span>Bright</span> Future
@@ -281,7 +281,7 @@
                             <div class="col-md-12 col-lg-7">
                                 <div class="hero-content">
                                     <h6 class="hero-sub-title" data-animation="fadeInDown" data-delay=".25s">
-                                        <i class="far fa-book-open-reader"></i>Welcome To Eduka!
+                                        <i class="far fa-book-open-reader"></i>Welcome To UBC!
                                     </h6>
                                     <h1 class="hero-title" data-animation="fadeInRight" data-delay=".50s">
                                         Start Your Beautiful And <span>Bright</span> Future
@@ -397,7 +397,7 @@
                             <div class="site-heading mb-3">
                                 <span class="site-title-tagline"><i class="far fa-book-open-reader"></i> About Us</span>
                                 <h2 class="site-title">
-                                    Our Edukation System <span>Inspires</span> You More.
+                                    Our UBCtion System <span>Inspires</span> You More.
                                 </h2>
                             </div>
                             <p class="about-text">
@@ -413,7 +413,7 @@
                                                 <img src="assets/img/icon/open-book.svg" alt="">
                                             </div>
                                             <div class="about-item-content">
-                                                <h5>Edukation Services</h5>
+                                                <h5>UBCtion Services</h5>
                                                 <p>It is a long established fact that reader will to using content.</p>
                                             </div>
                                         </div>
@@ -1669,7 +1669,7 @@
                     <div class="row">
                         <div class="col-md-6 align-self-center">
                             <p class="copyright-text">
-                                &copy; Copyright <span id="date"></span> <a href="#"> Eduka </a> All Rights Reserved.
+                                &copy; Copyright <span id="date"></span> <a href="#"> UBC </a> All Rights Reserved.
                             </p>
                         </div>
                         <div class="col-md-6 align-self-center">
@@ -1711,6 +1711,6 @@
 </body>
 
 
-<!-- Mirrored from live.themewild.com/eduka/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 26 Feb 2025 14:08:06 GMT -->
+<!-- Mirrored from live.themewild.com/UBC/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 26 Feb 2025 14:08:06 GMT -->
 
 </html>
