--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from live.themewild.com/UBC/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 26 Feb 2025 14:07:09 GMT -->
+<!-- Mirrored from live.themewild.com/UBC/# by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 26 Feb 2025 14:07:09 GMT -->
 
 <head>
     <!-- meta tags -->
@@ -81,7 +81,7 @@
         <div class="main-navigation">
             <nav class="navbar navbar-expand-lg">
                 <div class="container position-relative">
-                    <a class="navbar-brand" href="index.html">
+                    <a class="navbar-brand" href="#">
                         <img src="assets/img/logo/logo.png" alt="logo">
                     </a>
                     <div class="mobile-menu-right">
@@ -103,10 +103,10 @@
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Institution</a>
                                 <ul class="dropdown-menu fade-down">
-                                    <li><a class="dropdown-item" href="course.html">Courses One</a></li>
-                                    <li><a class="dropdown-item" href="course-2.html">Courses Two</a></li>
-                                    <li><a class="dropdown-item" href="course-single.html">Course Single One</a></li>
-                                    <li><a class="dropdown-item" href="course-single-2.html">Course Single Two</a></li>
+                                    <li><a class="dropdown-item" href="#">Courses One</a></li>
+                                    <li><a class="dropdown-item" href="#">Courses Two</a></li>
+                                    <li><a class="dropdown-item" href="#">Course Single One</a></li>
+                                    <li><a class="dropdown-item" href="#">Course Single Two</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item mega-menu dropdown">
@@ -128,47 +128,42 @@
                                                 <div class="col-12 col-sm-4 col-md-3">
                                                     <h5>Undergraduate</h5>
                                                     <ul class="mega-menu-item">
-                                                        <li><a class="dropdown-item" href="academic-single.html">Art And
+                                                        <li><a class="dropdown-item" href="#">Art And
                                                                 Design</a></li>
-                                                        <li><a class="dropdown-item" href="academic-single.html">Acting
+                                                        <li><a class="dropdown-item" href="#">Acting
                                                                 And Drama</a></li>
-                                                        <li><a class="dropdown-item"
-                                                                href="academic-single.html">Accounting And Finance</a>
+                                                        <li><a class="dropdown-item" href="#">Accounting And Finance</a>
                                                         </li>
-                                                        <li><a class="dropdown-item" href="academic-single.html">Biology
+                                                        <li><a class="dropdown-item" href="#">Biology
                                                                 And Conservation</a></li>
-                                                        <li><a class="dropdown-item" href="academic-single.html">Science
+                                                        <li><a class="dropdown-item" href="#">Science
                                                                 And Engineering</a></li>
                                                     </ul>
                                                 </div>
                                                 <div class="col-12 col-sm-4 col-md-3">
                                                     <h5>Graduate Program</h5>
                                                     <ul class="mega-menu-item">
-                                                        <li><a class="dropdown-item"
-                                                                href="academic-single.html">Software Systems</a></li>
-                                                        <li><a class="dropdown-item" href="academic-single.html">Human
+                                                        <li><a class="dropdown-item" href="#">Software Systems</a></li>
+                                                        <li><a class="dropdown-item" href="#">Human
                                                                 Resource</a></li>
-                                                        <li><a class="dropdown-item" href="academic-single.html">Health
+                                                        <li><a class="dropdown-item" href="#">Health
                                                                 Administration</a></li>
-                                                        <li><a class="dropdown-item"
-                                                                href="academic-single.html">Biochemistry</a></li>
-                                                        <li><a class="dropdown-item"
-                                                                href="academic-single.html">Computer Science</a></li>
+                                                        <li><a class="dropdown-item" href="#">Biochemistry</a></li>
+                                                        <li><a class="dropdown-item" href="#">Computer Science</a></li>
                                                     </ul>
                                                 </div>
                                                 <div class="col-12 col-sm-12 col-md-3">
                                                     <h5>Resources</h5>
                                                     <ul class="mega-menu-item">
-                                                        <li><a class="dropdown-item" href="academic.html">Academics
+                                                        <li><a class="dropdown-item" href="#">Academics
                                                                 Department</a></li>
-                                                        <li><a class="dropdown-item"
-                                                                href="academic-single.html">Academic Department
+                                                        <li><a class="dropdown-item" href="#">Academic Department
                                                                 Single</a></li>
-                                                        <li><a class="dropdown-item" href="faculty.html">Our Faculty</a>
+                                                        <li><a class="dropdown-item" href="#">Our Faculty</a>
                                                         </li>
-                                                        <li><a class="dropdown-item" href="faculty-single.html">Faculty
+                                                        <li><a class="dropdown-item" href="#">Faculty
                                                                 Single</a></li>
-                                                        <li><a class="dropdown-item" href="contact.html">Contact With
+                                                        <li><a class="dropdown-item" href="#">Contact With
                                                                 Us</a></li>
                                                     </ul>
                                                 </div>
@@ -183,7 +178,7 @@
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Publications</a>
                             </li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
                         </ul>
                         <div class="nav-right">
                             <div class="search-btn">
@@ -191,8 +186,7 @@
                                         class="far fa-search"></i></button>
                             </div>
                             <div class="nav-right-btn mt-2">
-                                <a href="application-form.html" class="theme-btn"><span
-                                        class="fal fa-pencil"></span>S'inscrire</a>
+                                <a href="#" class="theme-btn"><span class="fal fa-pencil"></span>S'inscrire</a>
                             </div>
                         </div>
                     </div>
@@ -238,9 +232,9 @@
                                         injected humour.
                                     </p>
                                     <div class="hero-btn" data-animation="fadeInUp" data-delay="1s">
-                                        <a href="about.html" class="theme-btn">About More<i
+                                        <a href="#" class="theme-btn">About More<i
                                                 class="fas fa-arrow-right-long"></i></a>
-                                        <a href="contact.html" class="theme-btn theme-btn2">Learn More<i
+                                        <a href="#" class="theme-btn theme-btn2">Learn More<i
                                                 class="fas fa-arrow-right-long"></i></a>
                                     </div>
                                 </div>
@@ -265,9 +259,9 @@
                                         injected humour.
                                     </p>
                                     <div class="hero-btn" data-animation="fadeInUp" data-delay="1s">
-                                        <a href="about.html" class="theme-btn">About More<i
+                                        <a href="#" class="theme-btn">About More<i
                                                 class="fas fa-arrow-right-long"></i></a>
-                                        <a href="contact.html" class="theme-btn theme-btn2">Learn More<i
+                                        <a href="#" class="theme-btn theme-btn2">Learn More<i
                                                 class="fas fa-arrow-right-long"></i></a>
                                     </div>
                                 </div>
@@ -292,9 +286,9 @@
                                         injected humour.
                                     </p>
                                     <div class="hero-btn" data-animation="fadeInUp" data-delay="1s">
-                                        <a href="about.html" class="theme-btn">About More<i
+                                        <a href="#" class="theme-btn">About More<i
                                                 class="fas fa-arrow-right-long"></i></a>
-                                        <a href="contact.html" class="theme-btn theme-btn2">Learn More<i
+                                        <a href="#" class="theme-btn theme-btn2">Learn More<i
                                                 class="fas fa-arrow-right-long"></i></a>
                                     </div>
                                 </div>
@@ -438,8 +432,7 @@
                                 </div>
                             </div>
                             <div class="about-bottom">
-                                <a href="about.html" class="theme-btn">Discover More<i
-                                        class="fas fa-arrow-right-long"></i></a>
+                                <a href="#" class="theme-btn">Discover More<i class="fas fa-arrow-right-long"></i></a>
                                 <div class="about-phone">
                                     <div class="icon"><i class="fal fa-headset"></i></div>
                                     <div class="number">
@@ -761,8 +754,7 @@
                             There are many variations of passages available but the majority have suffered
                             alteration in some form by injected humour look even slightly believable.
                         </p>
-                        <a href="about.html" class="theme-btn mt-30">Learn More<i
-                                class="fas fa-arrow-right-long"></i></a>
+                        <a href="#" class="theme-btn mt-30">Learn More<i class="fas fa-arrow-right-long"></i></a>
                     </div>
                     <div class="col-lg-8 wow fadeInRight" data-wow-delay=".25s">
                         <div class="video-content" style="background-image: url(assets/img/video/01.jpg);">
@@ -1056,8 +1048,7 @@
                                     alteration in some form by injected humour randomised words which don't look even
                                     slightly believable.</p>
                                 <div class="cta-btn">
-                                    <a href="application-form.html" class="theme-btn">Apply Now<i
-                                            class="fas fa-arrow-right-long"></i></a>
+                                    <a href="#" class="theme-btn">Apply Now<i class="fas fa-arrow-right-long"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -1247,7 +1238,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <a href="contact.html" class="theme-btn mt-5">Learn More<i
+                                    <a href="#" class="theme-btn mt-5">Learn More<i
                                             class="fas fa-arrow-right-long"></i></a>
                                 </div>
                             </div>
@@ -1278,10 +1269,10 @@
                             <img src="assets/img/icon/monitor.svg" alt="">
                         </div>
                         <div class="department-info">
-                            <h4 class="department-title"><a href="academic-single.html">Business And Finance</a></h4>
+                            <h4 class="department-title"><a href="#">Business And Finance</a></h4>
                             <p>There are many variations of passages the majority have some injected humour.</p>
                             <div class="department-btn">
-                                <a href="academic-single.html">Read More<i class="fas fa-arrow-right-long"></i></a>
+                                <a href="#">Read More<i class="fas fa-arrow-right-long"></i></a>
                             </div>
                         </div>
                     </div>
@@ -1290,10 +1281,10 @@
                             <img src="assets/img/icon/law.svg" alt="">
                         </div>
                         <div class="department-info">
-                            <h4 class="department-title"><a href="academic-single.html">Law And Criminology</a></h4>
+                            <h4 class="department-title"><a href="#">Law And Criminology</a></h4>
                             <p>There are many variations of passages the majority have some injected humour.</p>
                             <div class="department-btn">
-                                <a href="academic-single.html">Read More<i class="fas fa-arrow-right-long"></i></a>
+                                <a href="#">Read More<i class="fas fa-arrow-right-long"></i></a>
                             </div>
                         </div>
                     </div>
@@ -1302,10 +1293,10 @@
                             <img src="assets/img/icon/data.svg" alt="">
                         </div>
                         <div class="department-info">
-                            <h4 class="department-title"><a href="academic-single.html">IT And Data Science</a></h4>
+                            <h4 class="department-title"><a href="#">IT And Data Science</a></h4>
                             <p>There are many variations of passages the majority have some injected humour.</p>
                             <div class="department-btn">
-                                <a href="academic-single.html">Read More<i class="fas fa-arrow-right-long"></i></a>
+                                <a href="#">Read More<i class="fas fa-arrow-right-long"></i></a>
                             </div>
                         </div>
                     </div>
@@ -1314,10 +1305,10 @@
                             <img src="assets/img/icon/health.svg" alt="">
                         </div>
                         <div class="department-info">
-                            <h4 class="department-title"><a href="academic-single.html">Health And Medicine</a></h4>
+                            <h4 class="department-title"><a href="#">Health And Medicine</a></h4>
                             <p>There are many variations of passages the majority have some injected humour.</p>
                             <div class="department-btn">
-                                <a href="academic-single.html">Read More<i class="fas fa-arrow-right-long"></i></a>
+                                <a href="#">Read More<i class="fas fa-arrow-right-long"></i></a>
                             </div>
                         </div>
                     </div>
@@ -1326,10 +1317,10 @@
                             <img src="assets/img/icon/art.svg" alt="">
                         </div>
                         <div class="department-info">
-                            <h4 class="department-title"><a href="academic-single.html">Art And Design</a></h4>
+                            <h4 class="department-title"><a href="#">Art And Design</a></h4>
                             <p>There are many variations of passages the majority have some injected humour.</p>
                             <div class="department-btn">
-                                <a href="academic-single.html">Read More<i class="fas fa-arrow-right-long"></i></a>
+                                <a href="#">Read More<i class="fas fa-arrow-right-long"></i></a>
                             </div>
                         </div>
                     </div>
@@ -1711,6 +1702,6 @@
 </body>
 
 
-<!-- Mirrored from live.themewild.com/UBC/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 26 Feb 2025 14:08:06 GMT -->
+<!-- Mirrored from live.themewild.com/UBC/# by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 26 Feb 2025 14:08:06 GMT -->
 
 </html>
