Reviewing all link in index

--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
                             <div class="course-img">
                                 <span class="course-tag"><i class="far fa-bookmark"></i> Drama</span>
                                 <img src="assets/img/course/01.jpg" alt="">
-                                <a href="course-single.html" class="btn"><i class="far fa-link"></i></a>
+                                <a href="#" class="btn"><i class="far fa-link"></i></a>
                             </div>
                             <div class="course-content">
                                 <div class="course-meta">
@@ -537,7 +537,7 @@
                                     </div>
                                 </div>
                                 <h4 class="course-title">
-                                    <a href="course-single.html">Acting And Drama</a>
+                                    <a href="#">Acting And Drama</a>
                                 </h4>
                                 <p class="course-text">
                                     There are many variations of passages orem psum available but the majority have
@@ -558,7 +558,7 @@
                             <div class="course-img">
                                 <span class="course-tag"><i class="far fa-bookmark"></i> Design</span>
                                 <img src="assets/img/course/02.jpg" alt="">
-                                <a href="course-single.html" class="btn"><i class="far fa-link"></i></a>
+                                <a href="#" class="btn"><i class="far fa-link"></i></a>
                             </div>
                             <div class="course-content">
                                 <div class="course-meta">
@@ -573,7 +573,7 @@
                                     </div>
                                 </div>
                                 <h4 class="course-title">
-                                    <a href="course-single.html">Art And Design</a>
+                                    <a href="#">Art And Design</a>
                                 </h4>
                                 <p class="course-text">
                                     There are many variations of passages orem psum available but the majority have
@@ -594,7 +594,7 @@
                             <div class="course-img">
                                 <span class="course-tag"><i class="far fa-bookmark"></i> Science</span>
                                 <img src="assets/img/course/03.jpg" alt="">
-                                <a href="course-single.html" class="btn"><i class="far fa-link"></i></a>
+                                <a href="#" class="btn"><i class="far fa-link"></i></a>
                             </div>
                             <div class="course-content">
                                 <div class="course-meta">
@@ -609,7 +609,7 @@
                                     </div>
                                 </div>
                                 <h4 class="course-title">
-                                    <a href="course-single.html">Biology And Conservation</a>
+                                    <a href="#">Biology And Conservation</a>
                                 </h4>
                                 <p class="course-text">
                                     There are many variations of passages orem psum available but the majority have
@@ -630,7 +630,7 @@
                             <div class="course-img">
                                 <span class="course-tag"><i class="far fa-bookmark"></i> Science</span>
                                 <img src="assets/img/course/04.jpg" alt="">
-                                <a href="course-single.html" class="btn"><i class="far fa-link"></i></a>
+                                <a href="#" class="btn"><i class="far fa-link"></i></a>
                             </div>
                             <div class="course-content">
                                 <div class="course-meta">
@@ -645,7 +645,7 @@
                                     </div>
                                 </div>
                                 <h4 class="course-title">
-                                    <a href="course-single.html">Science And Engineering</a>
+                                    <a href="#">Science And Engineering</a>
                                 </h4>
                                 <p class="course-text">
                                     There are many variations of passages orem psum available but the majority have
@@ -666,7 +666,7 @@
                             <div class="course-img">
                                 <span class="course-tag"><i class="far fa-bookmark"></i> Health</span>
                                 <img src="assets/img/course/05.jpg" alt="">
-                                <a href="course-single.html" class="btn"><i class="far fa-link"></i></a>
+                                <a href="#" class="btn"><i class="far fa-link"></i></a>
                             </div>
                             <div class="course-content">
                                 <div class="course-meta">
@@ -681,7 +681,7 @@
                                     </div>
                                 </div>
                                 <h4 class="course-title">
-                                    <a href="course-single.html">Health Administration</a>
+                                    <a href="#">Health Administration</a>
                                 </h4>
                                 <p class="course-text">
                                     There are many variations of passages orem psum available but the majority have
@@ -702,7 +702,7 @@
                             <div class="course-img">
                                 <span class="course-tag"><i class="far fa-bookmark"></i> Finance</span>
                                 <img src="assets/img/course/06.jpg" alt="">
-                                <a href="course-single.html" class="btn"><i class="far fa-link"></i></a>
+                                <a href="#" class="btn"><i class="far fa-link"></i></a>
                             </div>
                             <div class="course-content">
                                 <div class="course-meta">
@@ -717,7 +717,7 @@
                                     </div>
                                 </div>
                                 <h4 class="course-title">
-                                    <a href="course-single.html">Accounting And Finance</a>
+                                    <a href="#">Accounting And Finance</a>
                                 </h4>
                                 <p class="course-text">
                                     There are many variations of passages orem psum available but the majority have
@@ -803,7 +803,7 @@
                             </div>
                             <div class="team-content">
                                 <div class="team-bio">
-                                    <h5><a href="teacher-single.html">Angela T. Vigil</a></h5>
+                                    <h5><a href="#">Angela T. Vigil</a></h5>
                                     <span>Associate Professor</span>
                                 </div>
                             </div>
@@ -823,7 +823,7 @@
                             </div>
                             <div class="team-content">
                                 <div class="team-bio">
-                                    <h5><a href="teacher-single.html">Frank A. Mitchell</a></h5>
+                                    <h5><a href="#">Frank A. Mitchell</a></h5>
                                     <span>Associate Professor</span>
                                 </div>
                             </div>
@@ -843,7 +843,7 @@
                             </div>
                             <div class="team-content">
                                 <div class="team-bio">
-                                    <h5><a href="teacher-single.html">Susan D. Lunsford</a></h5>
+                                    <h5><a href="#">Susan D. Lunsford</a></h5>
                                     <span>CEO & Founder</span>
                                 </div>
                             </div>
@@ -863,7 +863,7 @@
                             </div>
                             <div class="team-content">
                                 <div class="team-bio">
-                                    <h5><a href="teacher-single.html">Dennis A. Pruitt</a></h5>
+                                    <h5><a href="#">Dennis A. Pruitt</a></h5>
                                     <span>Associate Professor</span>
                                 </div>
                             </div>
@@ -1085,11 +1085,10 @@
                                 <span class="event-date"><i class="far fa-calendar-alt"></i>16 June, 2024</span>
                                 <span class="event-time"><i class="far fa-clock"></i>10.00AM - 04.00PM</span>
                             </div>
-                            <h4 class="event-title"><a href="event-single.html">High School Program 2024</a></h4>
+                            <h4 class="event-title"><a href="#">High School Program 2024</a></h4>
                             <p>There are many variations of passages the majority have some injected humour.</p>
                             <div class="event-btn">
-                                <a href="event-single.html" class="theme-btn">Join Event<i
-                                        class="fas fa-arrow-right-long"></i></a>
+                                <a href="#" class="theme-btn">Join Event<i class="fas fa-arrow-right-long"></i></a>
                             </div>
                         </div>
                     </div>
@@ -1105,11 +1104,10 @@
                                 <span class="event-date"><i class="far fa-calendar-alt"></i>16 June, 2024</span>
                                 <span class="event-time"><i class="far fa-clock"></i>10.00AM - 04.00PM</span>
                             </div>
-                            <h4 class="event-title"><a href="event-single.html">High School Program 2024</a></h4>
+                            <h4 class="event-title"><a href="#">High School Program 2024</a></h4>
                             <p>There are many variations of passages the majority have some injected humour.</p>
                             <div class="event-btn">
-                                <a href="event-single.html" class="theme-btn">Join Event<i
-                                        class="fas fa-arrow-right-long"></i></a>
+                                <a href="#" class="theme-btn">Join Event<i class="fas fa-arrow-right-long"></i></a>
                             </div>
                         </div>
                     </div>
@@ -1125,11 +1123,10 @@
                                 <span class="event-date"><i class="far fa-calendar-alt"></i>16 June, 2024</span>
                                 <span class="event-time"><i class="far fa-clock"></i>10.00AM - 04.00PM</span>
                             </div>
-                            <h4 class="event-title"><a href="event-single.html">High School Program 2024</a></h4>
+                            <h4 class="event-title"><a href="#">High School Program 2024</a></h4>
                             <p>There are many variations of passages the majority have some injected humour.</p>
                             <div class="event-btn">
-                                <a href="event-single.html" class="theme-btn">Join Event<i
-                                        class="fas fa-arrow-right-long"></i></a>
+                                <a href="#" class="theme-btn">Join Event<i class="fas fa-arrow-right-long"></i></a>
                             </div>
                         </div>
                     </div>
@@ -1145,11 +1142,10 @@
                                 <span class="event-date"><i class="far fa-calendar-alt"></i>16 June, 2024</span>
                                 <span class="event-time"><i class="far fa-clock"></i>10.00AM - 04.00PM</span>
                             </div>
-                            <h4 class="event-title"><a href="event-single.html">High School Program 2024</a></h4>
+                            <h4 class="event-title"><a href="#">High School Program 2024</a></h4>
                             <p>There are many variations of passages the majority have some injected humour.</p>
                             <div class="event-btn">
-                                <a href="event-single.html" class="theme-btn">Join Event<i
-                                        class="fas fa-arrow-right-long"></i></a>
+                                <a href="#" class="theme-btn">Join Event<i class="fas fa-arrow-right-long"></i></a>
                             </div>
                         </div>
                     </div>
@@ -1504,11 +1500,10 @@
                                     </ul>
                                 </div>
                                 <h4 class="blog-title">
-                                    <a href="blog-single.html">There are many variations passage have suffered
+                                    <a href="#">There are many variations passage have suffered
                                         available.</a>
                                 </h4>
-                                <a class="theme-btn" href="blog-single.html">Read More<i
-                                        class="fas fa-arrow-right-long"></i></a>
+                                <a class="theme-btn" href="#">Read More<i class="fas fa-arrow-right-long"></i></a>
                             </div>
                         </div>
                     </div>
@@ -1526,11 +1521,10 @@
                                     </ul>
                                 </div>
                                 <h4 class="blog-title">
-                                    <a href="blog-single.html">There are many variations passage have suffered
+                                    <a href="#">There are many variations passage have suffered
                                         available.</a>
                                 </h4>
-                                <a class="theme-btn" href="blog-single.html">Read More<i
-                                        class="fas fa-arrow-right-long"></i></a>
+                                <a class="theme-btn" href="#">Read More<i class="fas fa-arrow-right-long"></i></a>
                             </div>
                         </div>
                     </div>
@@ -1548,11 +1542,10 @@
                                     </ul>
                                 </div>
                                 <h4 class="blog-title">
-                                    <a href="blog-single.html">There are many variations passage have suffered
+                                    <a href="#">There are many variations passage have suffered
                                         available.</a>
                                 </h4>
-                                <a class="theme-btn" href="blog-single.html">Read More<i
-                                        class="fas fa-arrow-right-long"></i></a>
+                                <a class="theme-btn" href="#">Read More<i class="fas fa-arrow-right-long"></i></a>
                             </div>
                         </div>
                     </div>
