--- a/index.html
+++ b/index.html
@@ -103,10 +103,18 @@
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Institution</a>
                                 <ul class="dropdown-menu fade-down">
-                                    <li><a class="dropdown-item" href="#">Courses One</a></li>
-                                    <li><a class="dropdown-item" href="#">Courses Two</a></li>
-                                    <li><a class="dropdown-item" href="#">Course Single One</a></li>
-                                    <li><a class="dropdown-item" href="#">Course Single Two</a></li>
+                                    <li><a class="dropdown-item" href="#">One</a></li>
+                                    <li><a class="dropdown-item" href="#">Two</a></li>
+                                    <li><a class="dropdown-item" href="#">One</a></li>
+                                    <li><a class="dropdown-item" href="#">Two</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Service
+                                    Liguistiques</a>
+                                <ul class="dropdown-menu fade-down">
+                                    <li><a class="dropdown-item" href="#">Cabinet de Traduction</a></li>
+                                    <li><a class="dropdown-item" href="#">Ecole de Langue</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item mega-menu dropdown">
@@ -171,9 +179,6 @@
                                         </div>
                                     </div>
                                 </div>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Galerie</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Publications</a>
